      - Fixed MIDI output command
  - keyboard
    - added keyboard controller commands 0xCA and 0xCB
  - USB
    - initial USB OHCI support written by Ben Lunt (Win98 detects
      the controller, connecting devices not implemented yet)
  - VGA
    - VBE video memory increased to 16 MB
  - I/O APIC
    - implemented I/O APIC device hardware reset

- Misc
  - Updated Bochs TESTFORM to version 0.4

- SF patches applied
 [1895665] kvm: bios: add support to memory above the pci hole by Izik Eidus
 [2403372] rombios: check for valid cdrom before using it by Sebastian
 [2307269] acpi: handle S3 by Sebastian
 [2354134] TAP networking on Solaris/Sparc repaired
 [2144692] The scsi device can not complete its writing data command by naiyue
 [1827082] [PATCH] Configurable CPU vendor by Marcel Sondaar
 [2217229] Panic on EBDA overflow in rombios32 by Sebastian
 [2210194] Log pci class code by Sebastian
 [1984662] red led for disk write and titlebar mod by ggbsf
 [2142955] Fix for monitor/mwait by Doug Gibson
 [2137774] Patch to fix bug: cdrom: read_block: lseek returned error by Gabor Olah
 [2134642] Fix scan_to_scanascii table for F11 and F12 by Ben Guthro & Steve Ofsthun
 [2123036] sdl fullscreen fix by ggbsf
 [2073039] Remove CMOS accsess from AML code by Gleb Natapov
 [2072168] smbios: add L1-L3 cache handle to processor information by Sebastian
 [2055416] bochsrc cpu options for cpuid vendor and brand string by Doug Reed
 [2035278] rombios: Fix return from BEV via retf by Sebastian
 [2035260] rombios: El Torito load segment fix by Sebastian
 [2031978] Fix VMware backdoor command 0Ah by Jamie Lokier
 [2015277] Remove obsolete comment about DATA_SEG_DEFS_HERE hack by Sebastian
 [2011268] Set new default format and unit only if both are supported by Sebastian
 [2001919] gdbstub: fix qSupported reply by Sebastian
 [2001912] gdbstub: enclose packet data by apostrophes by Sebastian
 [1998071] fix missing SIGHUP and SIGQUIT with term ui on mingw by Sebastian